# Snake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
App/: CMakeLists.txt  Snake.cpp
Core/: CMakeLists.txt
Core/Private/: CoreAPI.cpp
Core/Public/: CoreAPI.h
UI/: CMakeLists.txt
UI/Private/: MainWindow.cpp
UI/Public/: MainWindow.h
